# openapi-client-gen

./: Cargo.toml  README.md
src/: main.rs  rt.rs  test.rs
