[package]
name = "openapi-client-gen"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["openapi", "generator", "ffi"]
categories = ["api-bindings"]
description = "Experimental OpenApi client generator for Rust with support for C-FFI and WASM"
readme = "README.md"

[features]
default = ["blocking", "async"]
blocking = []
async = []
ffi = []

[dependencies]
heck = "0.5.0"
json = "0.12.4"
reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls", "stream"], default-features = false}
either = "1.13.0"
http = "1.1.0"
linked-hash-map = "0.5.6"
urlencoding = "2.1.3"
paste = "1.0.5"
futures-util = "0.3.30"
tokio-util = { version = "0.7.12", features = ["codec"] }
futures-core = "0.3.30"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.39.2" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"